# explore-gemm

./: .gitignore  CMakeLists.txt  README.md  setup.sh
cuda/: 01_naive.cu  02_kernel_global_mem_coalesce.cu  03_kernel_shared_mem.cu  04_kernel_blocktiling_1d.cu  05_kernel_blocktiling_2d.cu  06_kernel_vectorize.cu  07_kernel_warptiling.cu  08_kernel_warptiling_all_dtypes.cu  09_kernel_tensorcore.cu  09_kernel_tensorcore_naive.cu  10_kernel_tensorcore_double_buffered.cu  10_kernel_tensorcore_warptiled.cu  11_kernel_cutlass.cu  11_kernel_tensorcore_double_buffered.cu  12_kernel_cutlass.cu  12_kernel_tensorcore_async.cu  13_kernel_cutlass.cu  14_kernel_cutlass_autotunable.cu  15_kernel_cutlass_hopper.cu  16_kernel_cutlass_hopper_autotunable.cu  arch_info.cu  autotune_kernels.cpp  gemm_kernels.cuh  utils.cuh
cuda/py/: autotune_cutlass.py  autotune_cutlass_hopper.py  benchmark.py  cuda_extension_loader.py  kernel_runner.py  test_kernels.py  triton_kernel_gemm.py
cuda/scripts/: benchmark_blackwell.cu  benchmark_hopper.cu  benchmarks.sh  common.h  hopper_benchmark_analysis.ipynb  hopper_results_h100.csv
cuda/tests/: test_gemm_blocktiling1d.cpp  test_gemm_blocktiling2d.cpp  test_gemm_coalesce.cpp  test_gemm_cutlass.cpp  test_gemm_cutlass_hopper.cpp  test_gemm_naive.cpp  test_gemm_shared_mem.cpp  test_gemm_tensorcore.cpp  test_gemm_tensorcore_async.cpp  test_gemm_tensorcore_double_buffered.cpp  test_gemm_tensorcore_naive.cpp  test_gemm_vectorize.cpp  test_gemm_warptiling.cpp  test_gemm_warptiling_all_dtypes.cpp
notebooks/: cute_samples.ipynb
results/h100/baseline/autotune_results/: autotune_cache_bfloat16.json  autotune_results_bfloat16.csv
results/h100/baseline/benchmark_results/: index.html  results.csv
triton/: benchmark.py  coalesced.py  naive.py
triton/tests/: test_coalesced.py  test_naive.py
